update folder unit testing and swagger
