# interface/assignment/handler.go
@@ -113,6 +113,7 @@ func (h *AssignmentHandler) GetAssignmentById(c echo.Context) error {
 // @Produce json
 // @Router /teacher/assignment/{id} [put]
 // @param id path int true "id"
+// @param data body entities.AssignmentResponse true "required"
 // @Success 200 {object} entities.Assignment
 // @Failure 400 {object} entities.Assignment
 // @Failure 500 {object} entities.Answare
@@ -151,6 +152,7 @@ func (h *AssignmentHandler) UpdateAssignment(c echo.Context) error {
 // @Produce json
 // @Router /teacher/assignment/{id} [delete]
 // @param id path int true "id"
+// @param data body entities.AssignmentResponse true "required"
 // @Success 200 {object} entities.Assignment
 // @Failure 400 {object} entities.Assignment
 // @Failure 500 {object} entities.Answare
