# interface/question/handler.go
@@ -117,6 +117,7 @@ func (h *QuestionHandler) GetAllQuestions(c echo.Context) error {
 // @Produce json
 // @Router /teacher/question/{id} [put]
 // @param id path int true "id"
+// @param data body entities.QuestionResponse true "required"
 // @Success 200 {object} entities.Question
 // @Failure 400 {object} entities.Question
 // @Failure 500 {object} entities.Question
@@ -158,6 +159,7 @@ func (h *QuestionHandler) UpdateQuestion(c echo.Context) error {
 // @Produce json
 // @Router /teacher/question/{id} [delete]
 // @param id path int true "id"
+// @param data body entities.QuestionResponse true "required"
 // @Success 200 {object} entities.Question
 // @Failure 400 {object} entities.Question
 // @Failure 500 {object} entities.Question
